# internal/handler/entry.go
@@ -7,6 +7,17 @@ import (
 	"github.com/labstack/echo/v4"
 )
 
+// GetEntry
+// @Summary Get Entry by ID
+// @Description Get Entry by ID
+// @Tags Entry
+// @ID entry-get-by-id
+// @Produce  json
+// @Param id path uint true "Entry ID"
+// @Success 200 {object} domain.ScheduleEntry
+// @Failure 400 {object} ErrorResponse
+// @Security Bearer
+// @Router /entries/{id} [get]
 func (c *Controller) GetEntry(ctx echo.Context) error {
 	id, err := parseIDParam(ctx, "id")
 	if err != nil {
@@ -20,6 +31,17 @@ func (c *Controller) GetEntry(ctx echo.Context) error {
 	return ctx.JSON(http.StatusOK, entry)
 }
 
+// CreateEntry
+// @Summary Create Entry
+// @Description Create Entry
+// @Tags Entry
+// @ID entry-create
+// @Produce  json
+// @Param data body domain.CreateScheduleEntryDTO true "Data"
+// @Success 201 {object} IDResponse
+// @Failure 400 {object} ErrorResponse
+// @Security Bearer
+// @Router /entries [post]
 func (c *Controller) CreateEntry(ctx echo.Context) error {
 	var req domain.CreateScheduleEntryDTO
 	err := bindStruct(ctx, &req)
@@ -34,6 +56,18 @@ func (c *Controller) CreateEntry(ctx echo.Context) error {
 	return ctx.JSON(http.StatusOK, NewIDResponse(id))
 }
 
+// UpdateEntry
+// @Summary Update Entry
+// @Description Update Entry
+// @Tags Entry
+// @ID entry-update
+// @Produce  json
+// @Param id path uint true "Entry ID"
+// @Param data body domain.UpdateScheduleEntryDTO true "Data"
+// @Success 200 {object} IDResponse
+// @Failure 400 {object} ErrorResponse
+// @Security Bearer
+// @Router /entries/{id} [patch]
 func (c *Controller) UpdateEntry(ctx echo.Context) error {
 	id, err := parseIDParam(ctx, "id")
 	if err != nil {
@@ -59,6 +93,17 @@ func (c *Controller) UpdateEntry(ctx echo.Context) error {
 	return ctx.JSON(http.StatusOK, NewIDResponse(id))
 }
 
+// DeleteEntry
+// @Summary Delete Entry
+// @Description Delete Entry
+// @Tags Entry
+// @ID entry-delete
+// @Produce  json
+// @Param id path uint true "Entry ID"
+// @Success 200 {object} IDResponse
+// @Failure 400 {object} ErrorResponse
+// @Security Bearer
+// @Router /entries/{id} [delete]
 func (c *Controller) DeleteEntry(ctx echo.Context) error {
 	id, err := parseIDParam(ctx, "id")
 	if err != nil {
